# backend-python-integration

./: README.md  app.py  consumer.py  pyproject.toml
ConsumerServerless/: pyproject.toml
ConsumerServerless/ConsumerLambda/: app.py
ConsumerServerless/ConsumerLambda/.chalice/: config.json
models/: Elegibility.py  Proposal.py  Simulation.py
services/: queues.py
