[tool.poetry]
name = "backend-python-integration"
version = "0.1.0"
description = ""
authors = ["Gustavo de Souza Gonçalves <goncalves.gustavo211@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.10.4"
fastapi = "^0.92.0"
uvicorn = "^0.20.0"
boto3 = "^1.26.70"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
